Fixing alignments

--- a/src/components/Work1.css
+++ b/src/components/Work1.css
@@ -10,7 +10,7 @@
 }
 
 .work-left{
-    flex: 1.5;
+    flex: 1;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,8 +19,8 @@
 
 
 .work-right{
-    flex: 1;
-    padding-right: 150px;
+    flex: 1.5;
+    padding-left: 150px;
 }
 
 .work-left-container1{
@@ -32,13 +32,15 @@
 .work-left-container2{
     width: 120%;
     position: relative;
-    margin-left: 100px;
-    margin-right: 90px;
+    margin-left: 30px;
+    margin-right: 30px;
     border-radius: 20px;
 }
 
 .work-image{
-    width: 850px;
+    margin-top: 200px;
+    margin-bottom: 100px;
+    width: 900px;
     object-fit: cover;
 }
 
@@ -73,7 +75,7 @@
 
 .work {
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     align-items: center;
     background-color: #ffffff;
     overflow: hidden;
@@ -99,7 +101,7 @@
 
 .work {
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     align-items: center;
     background-color: #ffffff;
     overflow: hidden;
@@ -125,6 +127,7 @@
 .work-right{
     flex: 1;
     padding-right: 0px;
+    padding-left: 0px;
 }
 
 .work-left-container1{
